Ignore Assets/ by default, sort .gitignore contents
* Order contents of .gitignore alphabetically

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 # =============== #
 # Unity generated #
 # =============== #
-Temp/
-Library/
+Assets/
 Builds/
+Library/
+Temp/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
-*.userprefs
 *.csproj
 *.sln
+*.userprefs
